[Update 0.1] Added header in html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Viaggio a Londra</title>
 </head>
 <body>
-    
+    <!-- Header - Titolo e immagini di Londra-->
+    <header>
+        <h1> Il mio Viaggio a Londra</h1>
+        <img src="img/pexels-bill-emrich-230794-0.jpg" width="200">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" width="200">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" width="200">
+        <hr> 
+    </header>
+    <!-- Main - Corpo dell'articolo con informazioni del viaggio e prezzo -->
+    <main>
+
+    </main>
+    <!-- Footer - Fine pagina con le nostre foto del viaggio -->
+    <footer>
+
+    </footer>
 </body>
 </html>
