--- a/index.html
+++ b/index.html
@@ -16,7 +16,72 @@
     </header>
     <!-- Main - Corpo dell'articolo con informazioni del viaggio e prezzo -->
     <main>
-
+        <h3>Le mie Spese</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Numero</th>
+                    <th>Descrizione</th>
+                    <th>Costo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+            </tbody>
+            <tfoot >
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360&euro;</td>
+                </tr>
+            </tfoot>
+        </table>
+        <hr>
+        <h3>Cose da Fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &cross;</li>
+            <li>Visitare greewich &check;</li>
+            <li>Ascoltare un artista di strada a Covent Garden &check;</li>
+            <li>Mangiare il tipico Fish and chips inglese &cross;</li>
+        </ul>
+        <hr>
+        <h3>Info utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul>
+                    <li><b>999</b> -  Emergenza</li>
+                        <li><b>101</b> - Numero polizia</li>
+                        <li><b>111</b> - Numero assistenza medica</li>
+                    </ul>
+                 </li>
+                 <li>Hotel
+                    <ul>
+                        <li><b>Nome Hotel:</b> Buckingham Palace</li>
+                        <li><b>Indirizzo Hotel:</b> Westminster, London SW1a 1AA, Regno Unito</li>              
+                    </ul>
+                 </li>
+                 <li> Aereo 
+                    <ul>
+                        <li><b>Volo di Andata:</b> Y1234X, Ore 9.30 da Milano Malpensa</li>
+                        <li><b>Volo di Ritorno:</b> Y1236X, Ore 18.30 da London Heathrow</li>
+                    </ul>
+                 </li>       
+        </ol>
+        <hr>
     </main>
     <!-- Footer - Fine pagina con le nostre foto del viaggio -->
     <footer>
