--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- Header - Titolo e immagini di Londra-->
     <header>
         <h1> Il mio Viaggio a Londra</h1>
-        <img src="img/pexels-bill-emrich-230794-0.jpg" width="200">
-        <img src="img/pexels-bill-emrich-230794-1.jpg" width="200">
-        <img src="img/pexels-bill-emrich-230794-2.jpg" width="200">
+        <img src="img/pexels-bill-emrich-230794-0.jpg" width="200" alt="foto londra1">
+        <img src="img/pexels-bill-emrich-230794-1.jpg" width="200" alt="foto londra2">
+        <img src="img/pexels-bill-emrich-230794-2.jpg" width="200" alt="foto londra3">
         <hr> 
     </header>
     <!-- Main - Corpo dell'articolo con informazioni del viaggio e prezzo -->
@@ -85,7 +85,9 @@
     </main>
     <!-- Footer - Fine pagina con le nostre foto del viaggio -->
     <footer>
-
+        <h3>Le foto</h3>
+        <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="foto ponte londra1" width="200">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="foto ponte londra2" width="200">
     </footer>
 </body>
 </html>
